# NyxEdit

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  jam.html  package-lock.json  package.json  temp_mod_top.txt
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
.nyx/: mqtt.json  rest_api.json  style_coding.json  symbol_graph.json
.svelte-kit/: ambient.d.ts  non-ambient.d.ts
docs/: CMMO Evolution Roadmap.docx  CMMO Evolution Roadmap.md  CMMO_v2.1_Blueprint.docx  CMMO_v2.1_Blueprint.md  CMMO_v2_Blueprint.docx  CMMO_v2_Blueprint.md  api.md  current.md  nyxedit-dark-v2.json  setup.md  troubleshooting.md
docs/architecture/: cmmo.md
src/: app.css  app.html
src-tauri/: Cargo.toml  index.html  models.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  lib.rs  main.rs
src-tauri/src/modules/: agent_orch.rs  ai.rs  chain_engine.rs  context.rs  contlib.code-workspace  cost_routing.rs  db.rs  executor.rs  fallback_manager.rs  fs.rs  graph.rs  handoff.rs  mod.rs  model_registry.rs  parsers.rs  pio.rs  project_intel.rs  provider.rs  provider_stats.rs  proxy.rs  pty.rs  review.rs  ripgrep.rs  router.rs  routing_engine.rs  self_heal.rs  sessions.rs  ssh.rs  symbol_graph.rs
src-tauri/src/modules/agent_orch/: mod.rs
src-tauri/src/modules/ai/: mod.rs  models.rs  pricing.rs
src-tauri/src/modules/analysis/: graph.rs  mod.rs  symbol_graph.rs
src-tauri/src/modules/db/: mod.rs
src-tauri/src/modules/execution/: cli.rs  mod.rs  tool_registry.rs
src-tauri/src/modules/fs/: git.rs  local.rs  mod.rs  remote.rs  search.rs  system.rs
src-tauri/src/modules/platform/: mod.rs
src-tauri/src/modules/project_intel/: mod.rs
src-tauri/src/modules/routing/: chain_engine.rs  fallback_manager.rs  mod.rs  model_registry.rs  routing_engine.rs
src-tauri/src/modules/security/: mod.rs  secrets.rs
src-tauri/src/modules/self_heal/: mod.rs
src-tauri/src/modules/session/: context.rs  cost_routing.rs  mod.rs  sessions.rs
src-tauri/src/modules/terminal/: mod.rs  pty.rs  ssh.rs
src/lib/: icon-overrides.ts  idle.svelte.ts  nyxConfig.ts  security.ts  stores.svelte.ts  themes.ts  utils.ts
src/lib/components/: AIChat.svelte  AIDiffTab.svelte  AIDiffViewer.svelte  AIFloatingBar.svelte  AnimeFooter.svelte  CodeEditor.svelte  CodeReviewPanel.svelte  CommandPalette.svelte  CommandSnippets.svelte  ContextMenu.svelte  DagVisualizationPanel.svelte  DatabaseClient.svelte  DiagnosticsPanel.svelte  FileManager.svelte  GitStatus.svelte  IntelPanel.svelte  MQTTClient.svelte  Notepad.svelte  OrchestratorPanel.svelte  PostmanClient.svelte  Runner.svelte  SSHExplorer.svelte  SSHSession.svelte  SSHTree.svelte  SearchInFiles.svelte  Settings.svelte  SplitTerminal.svelte  SystemHealthCostPanel.svelte  Terminal.svelte  Toast.svelte
src/lib/components/settings/: CostPanel.svelte  ExpandableSection.svelte  HealthPanel.svelte
src/lib/components/shared/: TabBar.svelte
src/lib/components/sidebar/: FileExplorer.svelte
src/lib/components/viewers/: ImageViewer.svelte  MarkdownViewer.svelte  MediaViewer.svelte  SvgViewer.svelte  ViewerRouter.svelte
src/lib/stores/: pageState.ts
src/lib/utils/: cmmoStatus.ts  extensions.ts  helpers.ts  pio.ts  ssh.ts  tabHelpers.ts  terminal.ts  workspace.ts
src/routes/: +layout.svelte  +page.svelte
static/.nyx/: style_coding.json
tool/: check.go  network_scanner.py  scanner.go
