[package]
name = "nyxedit"
version = "1.2.0"
description = "AI-native workshop with split terminal, multi-agent chat, notepad, file manager, and code editor"
authors = ["you"]
edition = "2021"

[lib]
name = "nyxedit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
url = "2.5.8"
tiny_http = "0.12.0"
regex = "1"
glob = "0.3"
russh = "0.48"
russh-sftp = "2"
similar = "2"
async-trait = "0.1"
ssh-key = "0.6"
tiktoken-rs = "0.6.0"
toml = "0.8"
mimalloc = "0.1"

# Knowledge graph
tree-sitter = "0.24"
notify = "7"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"

# Database connectivity
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "mysql", "sqlite", "chrono", "uuid"] }
mongodb = "2.8"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6", default-features = false, features = ["windows-native"] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }


